app/assets/stylesheets/videos_new.css
#lyrics-box.short { max-height: 458px; }

#title-box { position: relative; 
  top: 42px;
  width: 420px; 
  height: 60px; 
  text-align: center;
  background-color: white;
  border: 2px solid black;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  z-index: 1; }

#start {
  margin-right: auto; 
  margin-left: auto; 
  width: 142px;
  text-align: center; }

.very-wide-box {
  width: 1000px;
  text-align: center;
  height: 80px;
  position: relative;
  overflow: visible; }

#outer-video-box { overflow: visible !important; position: relative; }

#new-video-box { border: 2px solid black; }

.language-option { color: black; }

.video-container {
  margin-left: 80px;
  margin-right: 40px;
  margin-top: -30px;
  float: left; }

.input-xlarge { width: 220px; }

.keyword { font-weight: bold; 
  font-size: 18px;
  color: #673480; }

.right-to-left { text-align: right; }

/* LINES AND LYRICS EDITING AREA */

.input-line { 
  margin-left: 16px; 
  margin-top: 16px; 
  float: left; 
  width: 250px; }

.input-line-container { 
  width: 640px; }

.lines-being-edited { float: left; 
  width: 500px;
  margin-left: 30px;
  margin-right: 30px;
  margin-top: 10px;
  margin-bottom: -10px; }

.uniform-width { width: 52px; }

.tight-margins { margin: 2px !important; }

#edit-timing-slider { float: left; 
  width: 200px; 
  margin: 30px; }

/* SMALL LYRICS CONTAINER FOR THE VIDEO AS IT'S EDITED */

.lyrics-box.small { 
  height: 40px;
  width: 405px;
  top: 7px;
  left: 7px;
  border-radius: 7px; }

.small-lyrics-container {
  width: 180px;
  height: 30px;
  float: left;
  margin: 4px; }

.blue { color: blue } 

/* --------------------------------------------------- */

.language-video-option {
  text-align: left; }

.language-translation-option {
  text-align: left; }

#timer-box { position: absolute;
  left: -45px;
  top: 160px; }

#timer {  width: 90px;
  height: 90px;
  border-radius: 45px;
  background-color: #0F82F5;
  text-align: center; }

#big-timer {  color: white;
  line-height: 88px; }

#volume-slider { background-color: #9b59bb;
  position: absolute;
  bottom: -10px;
  height: 40px;
  right: -15px; }

#volume-slider.edit { bottom: 125px; right: 5px; }

/*  --------- CONTROLS BELOW VIDEO --------- */

#controls { position: relative; }

#settings { position: relative; 
  top: -15px; 
  height: 135px; 
  background-color: white;
  border: 2px solid black;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px; }

#settings.edit { height: 145px; }
#settings.clip { height: 65px; }

#notes-box {
  border-bottom: 2px solid black;
  border-left: 2px solid black;
  border-right: 2px solid black;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  padding: 15px; 
  padding-bottom: 10px; 
  padding-top: 32px; 
  position: relative;
  top: -25px; }
#notes-box.controls-hidden { padding-top: 42px; } 
#note { padding-left: 12px; padding-bottom: 12px; }
#translator-name { padding-left: 12px; }

#edit-button-suite { }
.btn-group { margin: 5px; }
.show-button-suite { float: right; position: relative; bottom: 32px; right: 4px; }
.show-button-suite .btn { float: right; margin-right: 0px; margin-left: 8px; }
.btn-tiny { font-size: 11px; }

/*** PLAYBACK SLIDER STYLING ***/

#playback-slider { width: 313px;
  left: 53px; 
  position: absolute;
  top: 80px; }

.ui-slider { background-color: #DDDDDD; }

#loop-slider { width: 333px; 
  left: 33px;
  top: -26px;
  margin: 10px; }

.end-label { 
  font-size: 12px; 
  color: white; 
  background-color: #9b59bb; 
  text-align: center;
  border-radius: 10px;
  position: relative; 
  width: 40px; 
  height: 30px; 
  z-index: 1; }

.loop-range-label { top: -4px; height: 18px; width: 30px; }

.end-label.playback-left-label { 
  position: absolute;
  top: 75px; 
  left: 20px;}

.end-label.playback-right-label { 
  position: absolute; 
  top: 75px; 
  right: 20px;}

.inner-label { width: 36px; height: 26px; margin: 2px; color: white; position: absolute; top: 2px; }

.loop-handle-label {
  font-size: 12px; 
  background-color: #0f82f5;
  color: white;
  height: 15px;
  border-radius: 10px;
  width: 20px; }

.ui-slider-horizontal .ui-slider-handle 
{ background-color: #134F5C ;
  height: 25px; width: 35px; 
  border-radius: 10px; 
  color: white; 
  font-size: 12px; 
  text-align: center; }

#loop-bar { background-color: #134F5C; }

.timer-blue { background-color: #0F82F5; opacity: 1 }

.ui-rangeSlider-leftLabel.loop-handle-label { bottom: -24px; }
.ui-rangeSlider-rightLabel.loop-handle-label { bottom: -24px; }

.tight-pack { margin-right: 1px !important; margin-left: 1px !important; margin-bottom: 5px; }

select { width: 150px; }

.rounded { margin-right: 10px; border-radius: 10px !important; }

.text-padding {
  margin: 3px;
  text-align: center; }

